        Reviewed by Oliver.

http://bugs.webkit.org/show_bug.cgi?id=17633
        SVG: modifying x & y attribute of text element from JS fails

        Make SVG text relayout when x, y attribute is changed from js.



git-svn-id: svn://svn.chromium.org/blink/trunk@31441 bbb929c8-8fbe-4397-9dbb-9b2b20218538