third_party/WebKit/WebCore/svg/SVGTextContentElement.cpp
@@ -1,7 +1,7 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
     Copyright (C) 2004, 2005, 2007, 2008 Nikolas Zimmermann <zimmermann@kde.org>
-                  2004, 2005, 2006, 2007 Rob Buis <buis@kde.org>
+                  2004, 2005, 2006, 2007, 2008 Rob Buis <buis@kde.org>
 
     This file is part of the KDE project
 
@@ -508,6 +508,16 @@ void SVGTextContentElement::parseMappedAttribute(MappedAttribute* attr)
 
         SVGStyledElement::parseMappedAttribute(attr);
     }
+}
+
+bool SVGTextContentElement::isKnownAttribute(const QualifiedName& attrName)
+{
+    return (attrName.matches(SVGNames::lengthAdjustAttr) ||
+            attrName.matches(SVGNames::textLengthAttr) ||
+            SVGTests::isKnownAttribute(attrName) ||
+            SVGLangSpace::isKnownAttribute(attrName) ||
+            SVGExternalResourcesRequired::isKnownAttribute(attrName) ||
+            SVGStyledElement::isKnownAttribute(attrName));
 }
 
 }
