third_party/WebKit/WebCore/svg/SVGTextContentElement.h
@@ -1,7 +1,7 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
     Copyright (C) 2004, 2005, 2008 Nikolas Zimmermann <zimmermann@kde.org>
-                  2004, 2005, 2006 Rob Buis <buis@kde.org>
+                  2004, 2005, 2006, 2008 Rob Buis <buis@kde.org>
 
     This file is part of the KDE project
 
@@ -61,6 +61,8 @@ namespace WebCore {
         void selectSubString(long charnum, long nchars, ExceptionCode&) const;
 
         virtual void parseMappedAttribute(MappedAttribute*);
+
+        bool isKnownAttribute(const QualifiedName&);
 
     private:
         ANIMATED_PROPERTY_FORWARD_DECLARATIONS(SVGExternalResourcesRequired, bool, ExternalResourcesRequired, externalResourcesRequired)
