third_party/WebKit/WebCore/svg/SVGTextPositioningElement.cpp
@@ -1,7 +1,7 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
     Copyright (C) 2004, 2005, 2008 Nikolas Zimmermann <zimmermann@kde.org>
-                  2004, 2005, 2006, 2007 Rob Buis <buis@kde.org>
+                  2004, 2005, 2006, 2007, 2008 Rob Buis <buis@kde.org>
 
     This file is part of the KDE project
 
@@ -66,6 +66,16 @@ void SVGTextPositioningElement::parseMappedAttribute(MappedAttribute* attr)
         rotateBaseValue()->parse(attr->value());
     else
         SVGTextContentElement::parseMappedAttribute(attr);
+}
+
+bool SVGTextPositioningElement::isKnownAttribute(const QualifiedName& attrName)
+{
+    return (attrName.matches(SVGNames::xAttr) ||
+            attrName.matches(SVGNames::yAttr) ||
+            attrName.matches(SVGNames::dxAttr) ||
+            attrName.matches(SVGNames::dyAttr) ||
+            attrName.matches(SVGNames::rotateAttr) ||
+            SVGTextContentElement::isKnownAttribute(attrName));
 }
 
 }
